# BOXMEOUT_STELLA

./: README.md  docker-compose.test.yml  docker-compose.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  contracts-ci.yml  frontend-ci.yml
backend/: .env.example  openapi.yaml  package-lock.json  package.json  pgmigrations.json
backend/db/: schema.sql
backend/migrations/: 1713960000000_initial-schema.js
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: db.ts  redis.ts
backend/src/controllers/: auth.controller.ts  disputes.controller.ts  submit-tx.controller.ts  treasury.controller.ts
backend/src/indexer/: StellarIndexer.ts
backend/src/middleware/: email-verification.middleware.ts  metrics.middleware.ts
backend/src/models/: Bet.ts  BlockchainEvent.ts  Market.ts  (+1 more)
backend/tests/: auth.integration.test.ts  setup.ts
contracts/: .gitignore  Cargo.toml  SECURITY_AUDIT.md
contracts/contracts/boxmeout/: Cargo.toml
contracts/contracts/boxmeout/src/: amm.rs  lib.rs  market.rs  oracle.rs  prediction_market.rs
contracts/contracts/boxmeout/tests/: integration_test.rs  market_test.rs  oracle_test.rs  prediction_market_test.rs
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  tests.rs
contracts/market_factory/: Cargo.toml
contracts/market_factory/src/: lib.rs
contracts/scripts/: deploy.sh
contracts/shared/: Cargo.toml
contracts/shared/src/: amm.rs  errors.rs  events.rs  lib.rs  types.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
docs/: CHANGES_MADE.md  EMAIL_VERIFICATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  QUICK_START.md  backend-issues.md  contracts-issues.md  email-verification-implementation.md  frontend-issues.md
frontend/: .env.example  package.json  playwright.config.ts
frontend/e2e/: bet-flow.spec.ts
stellar-contract/src/: errors.rs  events.rs  prediction_market.rs  test.rs  types.rs
(+90 files in other folders)
