[workspace]
members = [
    "shared",
    "market_factory",
    "market",
    "treasury",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.0.0" }

[profile.release]
opt-level     = "z"
overflow-checks = true
debug         = false
strip         = "symbols"
debug-assertions = false
panic         = "abort"
codegen-units = 1
lto           = true
