[package]
name = "boxmeout"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Features: Use these to build different contracts
# cargo build --target wasm32-unknown-unknown --release --features market
# cargo build --target wasm32-unknown-unknown --release --features oracle
# cargo build --target wasm32-unknown-unknown --release --features amm
# cargo build --target wasm32-unknown-unknown --release --features factory
# cargo build --target wasm32-unknown-unknown --release --features treasury
[features]
# No default - you MUST specify which contract to build
market = []
oracle = []
amm = []
factory = []
treasury = []
prediction_market = []
# Test feature to enable all contracts for integration tests
testutils = ["market", "oracle", "amm", "factory", "treasury", "prediction_market"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
debug = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

[[test]]
name = "integration_test"
required-features = ["testutils"]

[[test]]
name = "factory_test"
required-features = ["testutils"]

[[test]]
name = "market_test"
required-features = ["testutils"]

[[test]]
name = "oracle_test"
required-features = ["testutils"]

[[test]]
name = "treasury_test"
required-features = ["testutils"]

[[test]]
name = "prediction_market_test"
required-features = ["testutils"]
